<?xml version="1.0"?>
<package format="2">
  <name>dozer</name>
  <version>0.0.1</version>
  <description>R&amp;D package to get the UR driver working on the Husky</description>
  <maintainer email="chris@tclearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>husky_robot</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
  </export>
</package>
